[package]
name = "stackure"
version = "1.0.0"
edition = "2021"
description = "Official Stackure authentication SDK for Rust"
license = "MIT"
repository = "https://github.com/stackure/sdk-rust"
readme = "README.md"
keywords = ["authentication", "auth", "stackure", "passwordless"]
categories = ["authentication", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
