[package]
name = "stackure"
version = "1.0.0"
edition = "2021"
description = "Official Stackure authentication SDK for Rust"
license = "MIT"
repository = "https://github.com/syi-stackure/sdk-rust"
homepage = "https://stackure.com"
documentation = "https://docs.rs/stackure"
readme = "README.md"
keywords = ["authentication", "auth", "stackure", "passwordless", "sdk"]
categories = ["authentication", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[dependencies]
# Cargo version specs are compat ranges, not pins. "0.12" == "^0.12" (pre-1.0
# minor bumps are breaking in semver, so we track the 0.12.x series).
# "1" == "^1" floats within the 1.x major. Upstream fixes flow in automatically
# on the next cargo update.
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
